# CHAT_C-

./: .gitignore  README.md  installer.iss
client/: client.py
data/: server.ini
defay-client/: Cargo.toml  build.rs
defay-client/DefayClient/: config.json
defay-client/assets/: defay.css  style.css  ui.css
defay-client/src/: app.rs  config.rs  main.rs  net.rs  protocol.rs  ratelimit.rs  state.rs  telemetry.rs
server/: CMakeLists.txt
server/src/: aes_gcm_cng.cpp  config.cpp  config.hpp  crypto.cpp  crypto.hpp  db.cpp  db.hpp  hash.cpp  main.cpp  protocol.cpp  protocol.hpp  server.cpp  server.hpp  storage.cpp  storage.hpp  utils.hpp
server/src/app/: main.cpp
server/src/config/: config.cpp  config.hpp
server/src/crypto/: crypto.cpp  crypto.hpp
server/src/hash/: hash.cpp  hash.hpp
server/src/net/: protocol.cpp  protocol.hpp  server.cpp  server.hpp
server/src/storage/: storage.cpp  storage.hpp
server/src/util/: utils.hpp
