[package]
name = "defay-client"
version = "1.0.0"
edition = "2021"
authors = ["Fishing Team"]
license = "MIT"
build = "build.rs"
description = "Defay (Defay 1x9) — LAN чат-клиент на Rust"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.6"
byteorder = "1.5"
time = { version = "0.3", features = ["macros", "formatting"] }
rand = "0.8"
parking_lot = "0.12"
once_cell = "1.19"
log = "0.4"
chrono = { version = "0.4", default-features = true, features = ["clock"] }

tokio = { version = "1.39", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync"] }

# UI
dioxus = { version = "0.5", features = ["desktop", "router"] }
dioxus-desktop = "0.5"

# Конфиг и данные
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"

# Логирование и телеметрия
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "env-filter"] }
tracing-appender = "0.2"

# Декодирование изображений для загрузки иконок
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

# Clipboard handling for diagnostics
arboard = "3.2"

# Windows уведомления (компилируется только на Windows)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "UI_Notifications",
    "UI_Notifications_Management",
    "Data_Xml_Dom",
    "Win32_UI_WindowsAndMessaging"
] }

[features]
default = []